--- a/ckanext-hdx_theme/ckanext/hdx_theme/less/base/header.less
+++ b/ckanext-hdx_theme/ckanext/hdx_theme/less/base/header.less
@@ -406,11 +406,6 @@ h4 small {
     }
 
     .paddingRowHack{
-        &.row {
-          margin-left: -@gutterSmallSize;
-          margin-right: -@gutterSmallSize;
-        }
-
         margin-left: -@containerMarginSize;
         margin-right: -@containerMarginSize;
     }
