--- a/ckanext-hdx_theme/ckanext/hdx_theme/less/widget/contribute/details.less
+++ b/ckanext-hdx_theme/ckanext/hdx_theme/less/widget/contribute/details.less
@@ -6,8 +6,9 @@
   .content {
     //min-width: @containerRealSize*0.9;
     width: 90%;
-    max-width: @containerSize;
+    max-width: @containerRealSize + 2*@containerMarginSize;
     height: 90%;
+    padding: 0;
     .details-content{
       height: 100%;
       iframe {
